src/test/deca/context/invalid/sansObj/var-type.deca
// Description:
//      Déclaration d'une variable d'un type qui a le nom d'une variable
//
// Résultat:
//type non défini
//
{
    int a;
    a b;
}